--- a/index.html
+++ b/index.html
@@ -1,51 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.min.js"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"/>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+   <meta http-equiv="X-UA-compatible" content="ie-edge">
+   <title>Chat App</title>
+   <script defer src="http://localhost:3001/socket.io/socket.io.js"></script>
+   <script defer src="script.js"></script>
 </head>
 <body>
-<div class=”container”>
- <br>
- <div class=”jumbotron”>
- <h1 class=”display-4">Send Message</h1>
- <br>
- <input id = “name” class=”form-control” placeholder=”Name”>
- <br>
- <textarea id = “message” class=”form-control” placeholder=”Your Message Here”>
-</textarea>
- <br>
- <button id=”send” class=”btn btn-success”>Send</button>
- </div>
- <div id=”messages”>
- 
-</div>
-</div>
-<script>
-    $(() => {
-    $("#send").click(()=>{
-       sendMessage({
-          name: $("#name").val(), 
-          message:$("#message").val()});
-        })
-      getMessages()
-    })
-    
-function addMessages(message){
-   $(“#messages”).append(`
-      <h4> ${message.name} </h4>
-      <p>  ${message.message} </p>`)
-   }
-   
-function getMessages(){
-  $.get(‘http://localhost:3000/messages', (data) => {
-   data.forEach(addMessages);
-   })
- }
- 
-function sendMessage(message){
-   $.post(‘http://localhost:3000/messages', message)
- }
-</script>
+   <div id="message-container"></div>
+   <form id="send-container">
+      <input type="text" id="message-input"/>
+      <button type="submit" id="send-button">Send</button>
+   </form>
 </body>
 </html>
